--- a/styles/main.css
+++ b/styles/main.css
@@ -6,13 +6,23 @@ a{
     
 }
 h1{
-    font-size: medium;
+    font-size: large;
 }
-header h1,h2,h3{
+header h1{
 font-style: italic;
 color:steelblue;
-font-size: medium;
+font-size: large;
 }
+header h2{
+    font-style: italic;
+    color:steelblue;
+    font-size: medium;
+    }
+    header h3{
+        font-style: italic;
+        color:steelblue;
+        font-size: medium;
+        }
 header img{
     float:left;
     white-space: 1;
