--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,11 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
-a{
+body a{
     font-weight: bold;
     
 }
-h1{
+body h1{
     font-size: 150%;
 }
 header h1{
