--- a/styles/main.css
+++ b/styles/main.css
@@ -12,12 +12,12 @@ header h1{
     font-size: xx-large;
     }
 
-    body h3{
+    section h3{
         font-style: italic;
         color:steelblue;
         font-size: medium;
         }
-header img{
+section img{
     float:left;
     white-space: 1;
 }
