--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,15 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
-body a{
+a{
     font-weight: bold;
     
 }
 
-header h1{
+ h1{
     font-style: italic;
     color:steelblue;
-    font-size: xx-large;
+    font-size: 150%;
     }
 
     section h3{
@@ -17,7 +17,7 @@ header h1{
         color:steelblue;
         font-size: medium;
         }
-section img{
+header img{
     float:left;
     white-space: 1;
 }
