--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,14 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
-a, a:visited{
+a{
     font-weight: bold;
+    color:maroon;
+}
+a:link{
+    color:maroon;
+}
+a:visited{
     color:maroon;
 }
 
