--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,9 @@ a{
     font-weight: bold;
   color:maroon;
 }
-
+a:link{
+    color:maroon;
+}
 a:visited{
     color:maroon;
 }
@@ -13,7 +15,7 @@ a:focus,a:hover{
     color:steelblue;
 }
 
- h1{
+ header h1{
     font-style: italic;
     color:steelblue;
     font-size: 200%;
