--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,7 @@ a:focus,a:hover{
  header h1{
     font-style: italic;
     color:steelblue;
-    font-size: 350%;
+    font-size: xx-large;
     }
 
     section h3{
