--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@ a:focus,a:hover{
     color:steelblue;
 }
 
-header h1{
+header > h1{
     font-style: italic;
     color:steelblue;
     font-size: xx-large;
@@ -26,7 +26,7 @@ header img{
     text-indent: 50px;
 }
 
-aside h1{
+aside > h1{
     color:maroon;
 }
 aside ul{
