--- a/styles/main.css
+++ b/styles/main.css
@@ -28,13 +28,16 @@ header img{
     text-indent: 50px;
 }
 
-aside  h1{
+aside > h1{
     color:maroon;
 }
 aside a {
     color:steelblue;
 }
-aside a:hover, aside a:focus{
+aside a:hover{
+    color:maroon;
+}
+aside a:focus{
     color:maroon;
 }
 aside li{
