--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,14 @@
+*{
+    margin:0;
+    padding:0;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
+    width:700px;
+    border: solid steelblue;
+    box-shadow:8px black;
+    margin: 0 auto;
 }
 a{
     font-weight: bold;
@@ -17,6 +26,11 @@ section a:focus,a:hover{
     color:steelblue;
 }
 
+header{
+    background: linear-gradient(to bottom,white,lightsteelblue);
+    border-bottom:solid lightsteelblue;
+}
+
 header > h1{
     font-style: italic;
     color:steelblue;
@@ -26,6 +40,10 @@ header > h1{
 header img{
     float:left;
     text-indent: 50px;
+}
+
+aside{
+    border-radius: 2em steelblue;
 }
 
 aside  h1{
@@ -49,4 +67,8 @@ aside ul{
 footer{
     font-size: small;
     text-align: center;
+    background-color: steelblue;
+    & p{
+        color:white;
+    }
 }
