--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ body{
     border: 2px solid steelblue;
     box-shadow:8px black;
     margin:2px auto;
+    padding: 5px;
 }
 a{
     font-weight: bold;
