--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,7 @@ section a:focus,a:hover{
 header{
     background-image: linear-gradient(to bottom,white,lightsteelblue);
     border-bottom:solid lightsteelblue;
+    margin:2px;
 }
 
 header > h1{
