--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ aside{
     border:2px solid steelblue;
     border-radius: 2em;
     padding: 4px;
-    margin-bottom: 3px;
+    margin:4px;
 }
 
 
