--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@ body{
     border: 2px solid steelblue;
     box-shadow:8px black;
     margin:0 auto;
-    padding: 10px;
+    padding: 3em;
 }
 a{
     font-weight: bold;
