--- a/styles/main.css
+++ b/styles/main.css
@@ -46,8 +46,8 @@ header img{
 aside{
     border:2px solid steelblue;
     border-radius: 2em;
-    padding: 4px;
-    margin:4px;
+    padding: 4em;
+    margin:4em;
 }
 
 
