--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ section a:focus,a:hover{
 
 header{
     background-image: linear-gradient(to bottom,white,lightsteelblue);
-    border-bottom:solid lightsteelblue;
+    border-bottom:2px solid lightsteelblue;
 }
 
 header > h1{
