--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ body{
     width:700px;
     border: 2px solid steelblue;
     box-shadow:8px black;
-    margin:0 auto;
+    margin:1em auto;
 }
 a{
     font-weight: bold;
